src/objects/loan__Product_Pre_Paid_Fees__c.object
<CustomObject>
    <description>This is the junction object on Fee and product.</description>
    <fields>
        <fullName>loan__Add_Fee_to_Loan_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Fee to Loan Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Amortize_Balance__c</fullName>
        <label>Amortize Balance</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Paid Fees</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Fee_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Fee</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>No Fees exist with the type as pre-paid fees, please define a new fee with the type as pre paid fees</errorMessage>
            <filterItems>
                <field>loan__Fee__c.loan__Time_of_charge__c</field>
                <operation>equals</operation>
                <value>Pre-Paid Fees</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__Fee__c</referenceTo>
        <relationshipLabel>Pre-Paid Fee</relationshipLabel>
        <relationshipName>Pre_Paid_Fee</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Lending_Product__c</fullName>
        <label>Lending Product</label>
        <referenceTo>loan__Loan_Product__c</referenceTo>
        <relationshipName>Pre_Paid_Fee</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Product Pre-Paid Fee</label>
    <nameField>
        <displayFormat>PPD-{00000000}</displayFormat>
        <label>Product Pre-Paid Fee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Pre-Paid Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>